deploy/k8s/namespace.yaml
# namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oa-system
  labels:
    name: oa-system
    env: production
