deploy/k8s/service-api.yaml
# service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: oa-api-system-svc
  namespace: oa-system
  labels:
    app: oa-api
spec:
  selector:
    app: oa-api
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  type: ClusterIP
